<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SignupActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="#F3F5FA"
        android:backgroundTint="#2555E4"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="PlayME"

        android:textColor="#F8F7F7"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="Full Name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etAdress"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="Address"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="Contact Number"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etUser"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="User Name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="Password"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/teal_700"
            android:gravity="center"
            android:text="Log In"
            android:textSize="20sp" />


        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="Submit"
            android:textSize="20sp" />
    </LinearLayout>


</LinearLayout>