<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:backgroundTintMode="src_in"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="#F3F4F4"
        android:backgroundTint="#2555E4"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="PlayME"

        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        android:gravity="center"
        android:hint="Enter Your Username"
        android:textColor="#000000"

        android:textColorHint="#000000"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        android:gravity="center"
        android:hint="Enter Your Password"
        android:inputType="textPassword"
        android:textColor="#000000"

        android:textColorHint="#000000"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@color/purple_700"
            android:gravity="center"
            android:text="SignUp"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@color/teal_700"
            android:gravity="center"
            android:text="Log In"
            android:textSize="25sp" />

    </LinearLayout>


</LinearLayout>